--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/jest": "^29.4.0",
+    "@types/jest": "^29.5.6",
     "@types/node": "18.14.6",
     "aws-cdk": "2.69.0",
     "jest": "^29.7.0",
-    "ts-jest": "^29.0.5",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.5"
   },
   "dependencies": {
     "@aws-cdk/assertions": "^1.204.0",
+    "@aws-cdk/aws-lambda-event-sources": "^1.204.0",
     "aws-cdk-lib": "^2.101.1",
     "constructs": "^10.0.0",
     "dotenv": "^16.3.1",
